compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case_subject_pattern_unify.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 364
expression: "case 1.0 { 1 -> 1 }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:12
  │
1 │ case 1.0 { 1 -> 1 }
  │            ^

Expected type:

    Float

Found type:

    Int


